# MikuMikuWorld4CC

./: .gitignore  .gitmodules  CMakeLists.txt  README.ja.md  README.md  Rakefile  buildapp_config.json  buildimgui_config.ini  buildlatest_version.txt  compile_flags.txt  installerBase.nsi  shields.json
.github/workflows/: build.yml  check.yml
Depends/glad/include/glad/: glad.h
Depends/glad/src/: glad.c
MikuMikuWorld/: Application.cpp  Application.h  ApplicationConfiguration.cpp  ApplicationConfiguration.h  Background.cpp  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  CMakeLists.txt  Constants.h  DefaultLanguage.h  File.cpp  IO.cpp  IO.h  ImGuiManager.cpp  InputBinding.cpp  InputBinding.h  Jacket.cpp  Jacket.h  JsonIO.h  Language.cpp  Math.h  MikuMikuWorld.rc  MikuMikuWorld.vcxproj  Note.cpp  Note.h  NoteTypes.h  NotesPreset.cpp  NotesPreset.h  OpenGlLoader.cpp  Score.cpp  Score.h  ScoreContext.cpp  ScoreContext.h  ScoreConverter.cpp  ScoreEditor.cpp  ScoreEditorTimeline.cpp  ScoreEditorTimeline.h  ScoreEditorWindows.cpp  (+12 more)
MikuMikuWorld/Audio/: AudioManager.cpp  Sound.cpp  Sound.h  Waveform.h
MikuMikuWorld/Rendering/: Camera.cpp  Camera.h  Framebuffer.cpp  Quad.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
MikuMikuWorld/res/i18n/: .template.csv  en.csv  es.csv  ja.csv  kr.csv  pt.csv  ru.csv  tr.csv  zh.csv
